@@ -143,7 +143,7 @@ static inline unsigned short get_unaligned_uint16(void *p)
 #define IAX_IE_RR_DELAY                         49              /* Max playout delay for received frames (in ms) u16 */
 #define IAX_IE_RR_DROPPED                       50              /* Dropped frames (presumably by jitterbuf) u32 */
 #define IAX_IE_RR_OOO                           51              /* Frames received Out of Order u32 */
-
+#define IAX_IE_CALLTOKEN                        54              /* Call number security token */
 
 
 #define IAX_AUTH_PLAINTEXT			(1 << 0)
